// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Textarea theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <div>
    <div
      class="rh-field rh-field--stacked"
    >
      <label
        class="rh-field__label"
        for="snap-prompt"
      >
        Prompt
      </label>
      <textarea
        aria-describedby="snap-prompt-description"
        class="rh-control rh-textarea rh-textarea--resize-vertical"
        id="snap-prompt"
        rows="2"
      />
      <p
        class="rh-field__description"
        id="snap-prompt-description"
      >
        Shift+Enter for a newline.
      </p>
    </div>
    <div
      class="rh-field rh-field--stacked"
      data-invalid="true"
    >
      <label
        class="rh-field__label"
        for="snap-notes"
      >
        Notes
      </label>
      <textarea
        aria-describedby="snap-notes-error"
        aria-invalid="true"
        class="rh-control rh-textarea rh-textarea--resize-vertical"
        id="snap-notes"
        rows="2"
      />
      <p
        class="rh-field__error"
        id="snap-notes-error"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert rh-icon"
          data-icon="alert-circle"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        <span>
          Too long.
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Textarea theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <div>
    <div
      class="rh-field rh-field--stacked"
    >
      <label
        class="rh-field__label"
        for="snap-prompt"
      >
        Prompt
      </label>
      <textarea
        aria-describedby="snap-prompt-description"
        class="rh-control rh-textarea rh-textarea--resize-vertical"
        id="snap-prompt"
        rows="2"
      />
      <p
        class="rh-field__description"
        id="snap-prompt-description"
      >
        Shift+Enter for a newline.
      </p>
    </div>
    <div
      class="rh-field rh-field--stacked"
      data-invalid="true"
    >
      <label
        class="rh-field__label"
        for="snap-notes"
      >
        Notes
      </label>
      <textarea
        aria-describedby="snap-notes-error"
        aria-invalid="true"
        class="rh-control rh-textarea rh-textarea--resize-vertical"
        id="snap-notes"
        rows="2"
      />
      <p
        class="rh-field__error"
        id="snap-notes-error"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert rh-icon"
          data-icon="alert-circle"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        <span>
          Too long.
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Textarea theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <div>
    <div
      class="rh-field rh-field--stacked"
    >
      <label
        class="rh-field__label"
        for="snap-prompt"
      >
        Prompt
      </label>
      <textarea
        aria-describedby="snap-prompt-description"
        class="rh-control rh-textarea rh-textarea--resize-vertical"
        id="snap-prompt"
        rows="2"
      />
      <p
        class="rh-field__description"
        id="snap-prompt-description"
      >
        Shift+Enter for a newline.
      </p>
    </div>
    <div
      class="rh-field rh-field--stacked"
      data-invalid="true"
    >
      <label
        class="rh-field__label"
        for="snap-notes"
      >
        Notes
      </label>
      <textarea
        aria-describedby="snap-notes-error"
        aria-invalid="true"
        class="rh-control rh-textarea rh-textarea--resize-vertical"
        id="snap-notes"
        rows="2"
      />
      <p
        class="rh-field__error"
        id="snap-notes-error"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert rh-icon"
          data-icon="alert-circle"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        <span>
          Too long.
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Textarea theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <div>
    <div
      class="rh-field rh-field--stacked"
    >
      <label
        class="rh-field__label"
        for="snap-prompt"
      >
        Prompt
      </label>
      <textarea
        aria-describedby="snap-prompt-description"
        class="rh-control rh-textarea rh-textarea--resize-vertical"
        id="snap-prompt"
        rows="2"
      />
      <p
        class="rh-field__description"
        id="snap-prompt-description"
      >
        Shift+Enter for a newline.
      </p>
    </div>
    <div
      class="rh-field rh-field--stacked"
      data-invalid="true"
    >
      <label
        class="rh-field__label"
        for="snap-notes"
      >
        Notes
      </label>
      <textarea
        aria-describedby="snap-notes-error"
        aria-invalid="true"
        class="rh-control rh-textarea rh-textarea--resize-vertical"
        id="snap-notes"
        rows="2"
      />
      <p
        class="rh-field__error"
        id="snap-notes-error"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert rh-icon"
          data-icon="alert-circle"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        <span>
          Too long.
        </span>
      </p>
    </div>
  </div>
</div>
`;
